/*
   Copyright 2021 Google LLC

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    https://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/
syntax = "proto3";

package aprs;

option go_package = "github.com/ThomasHabets/ax25ms/pkg/aprs";

// import "proto/ax25.proto";

message Telemetry {
}

message Packet {
  message Position {
    string lat = 1;
    string lng = 2;
    string alt = 3;
    string symbol = 4;
  }
  Position position = 1;
  Telemetry telemetry = 2;
  string status = 3;

  message MicE {
    string msg = 1;
    bool position_current = 2;
  }
  MicE mic_e = 4;

  message Msg {
    string dst = 1;
    string msg = 2;
    string msg_number = 3;
  }
  Msg msg = 5;

  message Time {
    int32 day = 1;
    int32 hour = 2;
    int32 minute = 3;
  }
  message StatusReport {
    Time time = 1;
    string status_report = 2;
  }
  StatusReport status_report = 6;

  message Object {
    string name = 1;
    bool live = 2;
    Time time = 3;
    Position position = 4;
    string comment = 5;
  }
  Object object = 7;

  message Course {
  }
  Course course = 8;
}
